WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/HistoricoAtribuicaoLead__c.object
<CustomObject>
    <fields>
        <fullName>AntigoProprietario__c</fullName>
        <label>Antigo proprietário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Hora__c</fullName>
        <label>Data/Hora atribuição</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Históricos de Atribuição de Lead</relationshipLabel>
        <relationshipName>HistoricosAtribuicaoLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NovoProprietario__c</fullName>
        <label>Novo proprietário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TipoAntigoProprietario__c</fullName>
        <globalPicklist>TipoProprietario</globalPicklist>
        <label>Tipo antigo proprietário</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoNovoProprietario__c</fullName>
        <globalPicklist>TipoProprietario</globalPicklist>
        <label>Tipo novo proprietário</label>
        <type>Picklist</type>
    </fields>
    <label>Atribuição de Lead</label>
    <nameField>
        <displayFormat>HAL-{000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Atribuições de Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>